@@ -3,6 +3,8 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- Add enable/disable scheduler jobset on 'edit job' page
+
 - Add enable/disable scheduler jobsets
 
 - Fix changes to the 'Use device polling' state now fire up a 'reboot required' event as expected.
